--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -39,6 +39,7 @@
 
 .title-bar-icon {
   display: block;
+  z-index: 100;
 }
 
 .title-search {
@@ -48,11 +49,136 @@
 .times-icon {
   width: 20px;
   height: 20px;
-  z-index: 1000;
 }
 
 .padding-class {
   height: 60px;
+}
+
+.cart-sidebar {
+  position: absolute;
+  background-color: white;
+  box-shadow: 3px 3px 10px #c5c5c58a;
+  width: auto;
+  height: auto;
+  top: 85%;
+  z-index: 300;
+  right: 3.6%;
+  padding: 0 20px;
+}
+
+.head-cart-wrap {
+  display: flex;
+  width: 100%;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #3a2f2d57;
+  padding-bottom: 10px;
+}
+
+.head-cart-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  margin-left: 20px;
+}
+
+.head-cart-subg {
+  font-family: 'rutan';
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 2px;
+}
+
+.head-cart-prodn {
+  display: flex;
+  justify-content: space-between;
+  width: 75%;
+  font-family: 'rutanMedium';
+  text-transform: uppercase;
+  font-size: 17px;
+  letter-spacing: 4px;
+}
+
+.head-cart-prodn img {
+  height: 12px;
+  width: 12px;
+  cursor: pointer;
+  position: absolute;
+  right: 3%;
+}
+
+.suma {
+  float: right;
+  margin-top: 40px;
+  margin-left: 40px;
+  margin-bottom: 10px;
+}
+
+.head-empty-cart {
+  margin-top: 40px;
+}
+
+.head-cart-img img {
+  width: 100px;
+  height: 100px;
+  border: 1px solid #3a2f2d4f;
+}
+
+.head-cart-qty {
+  font-family: 'rutan';
+  bottom: 20px;
+  border-bottom: 1px solid #2e26144d;
+}
+
+.head-cart-dum {
+  padding-right: 20px;
+  cursor: pointer;
+}
+
+.head-cart-div {
+  padding-left: 20px;
+  cursor: pointer;
+}
+
+.head-cart-root {
+  display: flex;
+  justify-content: space-between;
+}
+
+.head-cart-total-pricing {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.head-cart-total {
+  font-family: 'rutan';
+  font-size: 25px;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  margin-top: 30px;
+}
+
+.head-cart-sub-pricing {
+  font-family: 'rutan';
+  font-size: 25px;
+  margin-top: 30px;
+  margin-right: -15px;
+  letter-spacing: 1.5px;
+}
+
+.head-cart-purchase-button {
+  margin-top: 74px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  width: 220px;
+  color: #fff;
+  background-color: #6e4e37;
+  margin-bottom: 50px;
+  border: none;
 }
 
 @media (max-width: 800px) {
