--- a/frontend/src/screens/CartScreen/CartScreen.css
+++ b/frontend/src/screens/CartScreen/CartScreen.css
@@ -1,3 +1,6 @@
+.cart-wrapper {
+}
+
 .cart-label {
   font-size: 30px;
   margin-top: 30px;
@@ -7,11 +10,21 @@
   font-family: 'rutanLight';
 }
 
+.empty-cart {
+  margin-bottom: 50vh;
+}
+
+.cart-sub-total {
+  margin-bottom: 20px;
+  margin-left: -7px;
+}
+
 .cart-list-image img {
   height: 210px;
   width: 210px;
   border: 1px solid #36353541;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .cart-list-det {
@@ -37,4 +50,64 @@
   font-size: 26px;
   font-family: 'rutan';
   margin-bottom: 30px;
+}
+
+.cart-trash-icon img {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+}
+
+.cart-quantity-dum {
+  font-family: 'rutan';
+  position: absolute;
+  bottom: 20px;
+  border-bottom: 1px solid #2e26144d;
+}
+
+.cart-quantity-decrease {
+  margin-right: 25px;
+  cursor: pointer;
+}
+
+.cart-quantity-increase {
+  margin-left: 25px;
+  cursor: pointer;
+}
+
+.cart-total-pricing {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.cart-total {
+  font-family: 'rutan';
+  font-size: 25px;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+}
+
+.cart-sub-pricing {
+  font-family: 'rutan';
+  font-size: 25px;
+  margin-right: -15px;
+  letter-spacing: 1.5px;
+}
+
+.cart-purchase-button {
+  margin-top: 74px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  width: 250px;
+  color: #fff;
+  background-color: #6e4e37;
+  margin-bottom: 50px;
+  border: none;
 }
