--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -42,6 +42,11 @@
   z-index: 100;
 }
 
+.title-icon-wrap {
+  position: absolute;
+  right: 1.3%;
+}
+
 .title-search {
   display: none;
 }
@@ -68,139 +73,126 @@
   border-radius: 0;
 }
 
-.cart-sidebar {
-  position: absolute;
-  background-color: white;
-  box-shadow: 3px 3px 10px #c5c5c58a;
-  width: auto;
-  height: auto;
-  min-width: 300px;
-  max-width: 500px;
-  max-height: 90vh;
-  overflow-y: auto;
-  top: 85%;
-  z-index: 300;
-  right: 3.6%;
-  padding: 0 20px;
+.head-cart-header {
+  margin-bottom: 40px;
+  font-family: 'rutanLight';
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.head-cart-scroll {
+  height: 60vh;
+  overflow-y: hidden;
+}
+
+.head-cart-scroll::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+/* .head-cart-scroll::-webkit-scrollbar:vertical {
+  width: 0.25rem;
+}
+
+.head-cart-scroll::-webkit-scrollbar-track {
+  display: block;
+  background-color: #e1d5bf;
+}
+
+.head-cart-scroll::-webkit-scrollbar-thumb {
+  background-color: #2e2614;
+} */
+
+.head-cart-header img {
+  margin-left: 55%;
 }
 
 .head-cart-wrap {
   display: flex;
-  width: 100%;
-  margin-bottom: 30px;
-  border-bottom: 1px solid #3a2f2d57;
-  padding-bottom: 10px;
+  position: relative;
+  border-bottom: #3a2f2d62 1px solid;
+  padding-bottom: 20px;
+  margin-bottom: 40px;
+}
+
+.head-cart-img img {
+  height: 100px;
+  width: 100px;
+}
+
+.head-cart-subg {
+  font-size: 12px;
+  font-family: 'rutanLight';
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.head-cart-prodn {
+  font-size: 16px;
+  font-family: 'rutan';
+  width: 85%;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.head-cart-root {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .head-cart-details {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
   margin-left: 20px;
 }
 
-.head-cart-subg {
-  font-family: 'rutan';
-  text-transform: uppercase;
-  font-size: 12px;
-  letter-spacing: 2px;
-}
-
-.head-cart-prodn {
-  display: flex;
-  justify-content: space-between;
-  width: 75%;
-  font-family: 'rutanMedium';
-  text-transform: uppercase;
-  font-size: 17px;
-  letter-spacing: 4px;
-}
-
-.head-cart-prodn img {
-  height: 12px;
-  width: 12px;
-  cursor: pointer;
+.head-cart-details img {
+  height: 10px;
+  width: 10px;
   position: absolute;
-  right: 3%;
+  top: 5px;
+  right: 0;
+  cursor: pointer;
 }
 
-.suma {
-  float: right;
-  margin-top: 40px;
-  margin-left: 40px;
-  margin-bottom: 10px;
-}
-
-.head-empty-cart {
-  margin-top: 40px;
-}
-
-.head-cart-img img {
-  width: 100px;
-  height: 100px;
-  border: 1px solid #3a2f2d4f;
+.head-cart-price {
+  position: absolute;
+  right: 0;
+  font-family: 'rutan';
 }
 
 .head-cart-qty {
-  font-family: 'rutan';
-  bottom: 20px;
-  border-bottom: 1px solid #2e26144d;
+  font-family: 'rutanLight';
+  border-bottom: 1px solid #3a2f2d7c;
 }
 
 .head-cart-dum {
-  padding-right: 20px;
+  margin-right: 20px;
   cursor: pointer;
 }
 
 .head-cart-div {
-  padding-left: 20px;
+  margin-left: 20px;
   cursor: pointer;
 }
 
-.head-cart-root {
-  display: flex;
-  justify-content: space-between;
+.head-cart-bottom-wrap {
+  position: relative;
 }
 
-.head-cart-total-pricing {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 30px;
+.head-cart-showmore {
+  text-align: center;
 }
 
-.head-cart-total {
+.head-cart-showmore button {
+  margin-top: 40px;
   font-family: 'rutan';
-  font-size: 25px;
-  text-transform: uppercase;
-  letter-spacing: 1.5px;
-  margin-top: 30px;
-}
-
-.head-cart-sub-pricing {
-  font-family: 'rutan';
-  font-size: 25px;
-  margin-top: 30px;
-  margin-right: -15px;
-  letter-spacing: 1.5px;
-}
-
-.head-cart-purchase-button {
-  margin-top: 74px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  margin-left: 50%;
-  transform: translateX(-50%);
-  width: 220px;
-  color: #fff;
-  background-color: #6e4e37;
-  margin-bottom: 50px;
   border: none;
-}
-
-.go-to-cart-link {
-  text-transform: capitalize;
-  font-family: 'rutanLight';
+  background-color: #f6f1ea;
+  padding: 10px 35px;
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 @media (max-width: 800px) {
