--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -82,7 +82,7 @@
 
 .head-cart-scroll {
   height: 60vh;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 .head-cart-scroll::-webkit-scrollbar {
@@ -193,6 +193,38 @@
   padding: 10px 35px;
   text-transform: uppercase;
   font-size: 12px;
+}
+
+.head-cart-sub-price-wrap {
+  display: flex;
+  margin-top: 35px;
+  margin-right: 10px;
+  justify-content: space-between;
+}
+
+.head-cart-sub-price-label {
+  font-size: 20px;
+  font-family: 'rutan';
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.head-cart-sub-price {
+  font-size: 20px;
+  font-family: 'rutan';
+}
+
+.head-cart-purchase-button-wrap {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.head-cart-purchase-button-wrap button {
+  padding: 10px 0;
+  border: none;
+  width: 100%;
+  background-color: #563b2e;
+  color: #fff;
 }
 
 @media (max-width: 800px) {
