--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -5,7 +5,7 @@
 }
 
 .fixed-top {
-  width: 1366px;
+  width: 100%;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -33,9 +33,9 @@
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
 }
 
-.ml-auto {
+/* .ml-auto {
   padding-right: 25px;
-}
+} */
 
 .title-bar-icon {
   display: block;
@@ -44,8 +44,8 @@
 }
 
 .title-icon-wrap {
-  position: absolute;
-  right: 1.3%;
+  margin-right: 38px;
+  padding-right: 25px;
 }
 
 .title-search {
@@ -228,9 +228,10 @@
   color: #fff;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1266px) {
   .title-icon-wrap {
-    right: 11.8%;
+    margin-right: 0;
+    padding-right: 0px;
   }
 }
 
@@ -238,36 +239,61 @@
   .padding-class {
     height: 45px;
   }
-
-  .title-icon-wrap {
-    right: 21%;
-  }
-
-  .modal-dialog {
-    right: 65px;
+  .modal-body {
+    width: max-content;
   }
 }
-
-@media (max-width: 500px) {
-  .title-icon-wrap {
-    right: 33.6%;
+@media (max-width: 768px) {
+  .head-cart-wrap {
+    width: 500px;
   }
-
+}
+@media (max-width: 500px) {
   .padding-class {
     height: 55px;
   }
-
-  .modal-dialog {
-    right: 0;
+}
+@media (max-width: 425px) {
+  .modal-body {
+    width: 425px;
   }
-
+  .modal-dialog {
+    position: relative;
+  }
   .modal-content {
-    width: 300px;
+    min-width: auto;
+    margin-left: 0;
+  }
+  .head-cart-wrap {
+    width: 375px;
+  }
+  .head-cart-header img {
+    margin-left: 45%;
   }
 }
-
-@media (max-width: 340px) {
-  .modal-content {
-    width: 150px !important;
+@media (max-width: 375px) {
+  .head-cart-wrap {
+    width: 325px;
+  }
+  .modal-body {
+    width: 375px;
+  }
+  .head-cart-header img {
+    margin-left: 35%;
+  }
+}
+@media (max-width: 320px) {
+  .head-cart-wrap {
+    width: 280px;
+  }
+  .modal-body {
+    width: 320px;
+    padding-right: 0;
+  }
+  .head-cart-prodn {
+    font-size: 12px;
+  }
+  .head-cart-header img {
+    margin-left: 35%;
   }
 }
