--- a/frontend/src/screens/CartScreen/CartScreen.css
+++ b/frontend/src/screens/CartScreen/CartScreen.css
@@ -1,6 +1,3 @@
-.cart-wrapper {
-}
-
 .cart-label {
   font-size: 30px;
   margin-top: 30px;
@@ -25,10 +22,6 @@
   border: 1px solid #36353541;
   margin-bottom: 20px;
   position: relative;
-}
-
-.cart-list-det {
-  margin-left: 20px;
 }
 
 .cart-list-sub {
@@ -115,4 +108,55 @@
 
 .continue-shopping {
   text-align: center;
+}
+@media (max-width: 1266px) {
+  .cart-trash-icon img {
+    right: 50px;
+  }
+}
+@media (max-width: 1200px) {
+  .cart-list-det {
+    width: 600px;
+    margin-left: 15px;
+  }
+  .cart-sub-pricing {
+    margin-right: 20px;
+  }
+}
+@media (max-width: 1024px) {
+  .cart-list-det {
+    margin-left: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .cart-list-det {
+    margin-left: 75px;
+  }
+  .cart-list-name {
+    padding-right: 95px;
+  }
+  .cart-sub-pricing {
+    margin-top: 50px;
+  }
+}
+@media (max-width: 425px) {
+  .cart-list-det {
+    margin-left: 0;
+    padding-left: 0 !important;
+  }
+  .cart-list-name {
+    letter-spacing: 1.5px;
+    width: 350px;
+    padding-right: 0;
+  }
+  .cart-price-quantity-row {
+    width: max-content;
+  }
+  .cart-list-image img {
+    height: 180px;
+    width: 180px;
+  }
+  .cart-quantity-dum {
+    bottom: 70px;
+  }
 }
