--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -41,6 +41,7 @@
   display: block;
   z-index: 100;
   cursor: pointer;
+  position: relative;
 }
 
 .title-icon-wrap {
@@ -227,6 +228,18 @@
   width: 100%;
   background-color: #563b2e;
   color: #fff;
+}
+
+.badge {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0);
+  color: #3a2f2d;
+  border-radius: 60%;
+  font-size: 10px;
+  width: 8px;
+  height: 11px;
 }
 
 @media (max-width: 1266px) {
