--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -242,6 +242,11 @@
   height: 11px;
 }
 
+.welcome-user {
+  font-family: 'rutan';
+  font-size: 12px;
+}
+
 @media (max-width: 1440px) {
   .title-icon-wrap {
     margin-right: 45px;
