--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -9,7 +9,7 @@
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 90;
+  z-index: 3;
 }
 
 .navbar-brand {
@@ -245,6 +245,16 @@
 .welcome-user {
   font-family: 'rutan';
   font-size: 12px;
+}
+
+.navbar-expand .navbar-nav .nav-link {
+  padding: 0 !important;
+}
+
+.dropdown-menu.show {
+  z-index: 10;
+  top: 10px;
+  right: 0;
 }
 
 @media (max-width: 1440px) {
