--- a/frontend/src/components/ProductDetails/ProductDetails.css
+++ b/frontend/src/components/ProductDetails/ProductDetails.css
@@ -384,11 +384,13 @@
   font-family: 'rutanLight';
   letter-spacing: 4.48px;
 }
+
 .similar-products-image img {
   width: 100%;
   height: 100%;
   border: 1px solid #36353541;
 }
+
 .similar-products-title {
   display: flex;
   flex-direction: column;
@@ -405,6 +407,7 @@
   text-align: left;
   height: 60px;
 }
+
 .similar-products-text {
   text-align: left;
   width: 100%;
@@ -418,6 +421,7 @@
   justify-content: center;
   text-decoration: none;
 }
+
 .similar-products-container {
   display: inline-flex;
   flex-basis: 20%;
@@ -425,18 +429,28 @@
   padding-right: 15px;
   padding-bottom: 15px;
 }
+
 .similar-products-wrapper {
   margin: 5px;
 }
+
+.dropdown-item.active,
+.dropdown-item:active {
+  background-color: #fff;
+  color: #212529;
+}
+
 /* -----------------------------------------LAPTOP  UPTO 1440PX------------------------------------------- */
 @media (max-width: 1290px) {
   .products-details-label {
     height: 190px;
   }
+
   .img-hero-wrap {
     width: 480px !important;
     height: 480px !important;
   }
+
   .dropdown-menu {
     transform: translate3d(20px, 25px, 0px) !important;
   }
@@ -452,11 +466,13 @@
   .testing {
     right: 0px;
   }
+
   .alt-img-hero {
     width: 440px;
     height: 520px;
     padding-left: 10px;
   }
+
   .dropdown-menu {
     transform: translate3d(20px, 25px, 0px) !important;
   }
@@ -468,6 +484,7 @@
     height: 50 0px;
   }
 }
+
 @media (max-width: 1160px) {
   .img-hero-wrap {
     width: 440px !important;
@@ -483,9 +500,11 @@
     padding-right: 15px;
     padding-bottom: 15px;
   }
+
   .products-details-label {
     height: 145px;
   }
+
   .img-hero-wrap {
     width: 400px !important;
     height: 400px !important;
@@ -494,17 +513,21 @@
   button#dropdown-basic {
     width: 225px;
   }
+
   .color-pick {
     margin-right: 40px;
   }
+
   .dropdown-item {
     padding: 3px;
     font-size: 12px;
     text-align: center;
   }
+
   .dropdown-menu {
     transform: translate3d(-19px, 25px, 0px) !important;
   }
+
   .product-purchase-button {
     margin: 50px 0 50px 25%;
   }
@@ -512,18 +535,23 @@
   .products-details-head {
     font-size: 23px;
   }
+
   .products-details-label {
     font-size: 30px;
   }
+
   .products-details-price {
     font-size: 28px;
   }
+
   .product-details-button {
     width: 100%;
   }
+
   .details-quantity {
     width: 225px;
   }
+
   .alt-img-list ul li img {
     width: 55px;
     height: 55px;
@@ -535,6 +563,7 @@
   .product-details-second-wrapper {
     margin: 0 -10%;
   }
+
   .similar-products-container {
     display: inline-flex;
     flex-basis: 190px;
@@ -542,47 +571,60 @@
     padding-right: 15px;
     padding-bottom: 15px;
   }
+
   .products-details-label {
     height: auto;
   }
+
   .testing {
     right: 55px;
   }
+
   .modal-content {
     min-width: 775px;
     margin-left: -130px;
   }
+
   .alt-img-hero {
     margin-left: 10px;
   }
+
   .product-det.col-lg-6 {
     padding: 0 10%;
   }
+
   .products-details-head {
     font-size: 50px;
     margin-bottom: 5px;
   }
+
   .products-details-price {
     margin-bottom: 30px;
   }
+
   button#dropdown-basic {
     width: 85%;
   }
+
   .details-quantity {
     width: 85%;
   }
+
   .dropdown-menu {
     transform: translate3d(-58px, 25px, 0px) !important;
   }
+
   .product-details-text {
     margin-bottom: 0px;
   }
 }
+
 @media (max-width: 900px) {
   .similar-products-title {
     height: 45px;
     font-size: 12px;
   }
+
   .similar-products-text {
     font-size: 12px;
   }
@@ -647,54 +689,70 @@
     padding-right: 15px;
     padding-bottom: 15px;
   }
+
   .product-det {
     margin-top: -50px;
   }
+
   .modal-check-button {
     font-size: 12px;
   }
+
   .modal-content {
     min-width: 627px;
     margin-left: -60px;
   }
+
   .modal-img img {
     width: 225px;
   }
+
   .alt-img-list {
     max-width: 9%;
     margin-left: 7%;
   }
+
   .alt-img-hero {
     margin-left: 15px;
   }
+
   button#dropdown-basic {
     width: 80%px;
   }
+
   .products-details-head {
     font-size: 30px;
     margin-bottom: 010px;
   }
+
   .products-details-price {
     margin-bottom: 30px;
   }
+
   .dropdown-menu {
     transform: translate3d(-48px, 25px, 0px) !important;
   }
+
   button.product-purchase-button {
     margin: 50px 140px 30px;
   }
+
   .product-details-color {
     margin-top: 62px;
   }
+
   .product-description-label {
     margin-bottom: 15px;
   }
+
   .product-details-texts {
     margin: 10px 0px;
   }
+
   .product-details-label {
     margin-top: 5px;
   }
+
   .product-details-text {
     margin-bottom: 0px;
   }
@@ -704,24 +762,30 @@
   .product-details-second-wrapper {
     margin: 0%;
   }
+
   .product-det.col-lg-6 {
     padding: 0px 15px;
   }
 }
+
 @media (max-width: 653px) {
   .modal-address {
     margin-bottom: 5px;
   }
+
   .modal-content {
     min-width: 590px;
     margin-left: -38px;
   }
+
   button.product-purchase-button {
     margin: 10% 30% 5% 26%;
   }
+
   .product-details-color {
     margin-top: 0px;
   }
+
   .alt-img-hero img {
     width: 420px;
     height: 500px;
@@ -731,29 +795,36 @@
   .material-det {
     margin-bottom: 55px;
   }
+
   .product-details-quantity {
     width: 82%;
     margin-top: 0px;
   }
+
   .alt-img-list ul li img {
     height: 58px;
     width: 58px;
     margin-bottom: 15px;
   }
+
   .dropdown-menu {
     transform: translate3d(-45px, 25px, 0px) !important;
   }
 }
+
 @media (max-width: 578px) {
   .testing {
     right: 0px;
   }
+
   button#dropdown-basic {
     width: 100%;
   }
+
   .details-quantity {
     width: 100%;
   }
+
   .dropdown-menu {
     transform: translate3d(0px, 25px, 0px) !important;
   }
@@ -764,11 +835,13 @@
     display: none;
   }
 }
+
 @media (max-width: 555px) {
   .product-details-carousel {
     margin-bottom: 100px;
     padding: 0px;
   }
+
   .alt-img-list {
     display: none;
   }
@@ -777,24 +850,30 @@
     display: none;
   }
 }
+
 @media (max-width: 541px) {
   .alt-img-hero img {
     width: 360px;
     height: 440px;
     margin-left: 15px;
   }
+
   .product-det {
     padding-left: 0px;
   }
+
   .products-details-label {
     font-size: 30px;
   }
+
   .products-details-price {
     margin-bottom: 25px;
   }
+
   .product-details-quantity {
     width: 83%;
   }
+
   .product-purchase-button {
     font-size: 12px;
   }
@@ -804,60 +883,75 @@
   .similar-products-container {
     flex-basis: 48%;
   }
+
   .material-dum {
     font-size: 12px;
     margin-top: 3px;
   }
+
   .thickness-dum {
     font-size: 12px;
     margin-top: 3px;
   }
 }
+
 @media (max-width: 472px) {
   .products-details-label {
     font-size: 24px;
   }
+
   .alt-img-hero img {
     width: 330px;
     height: 410px;
     margin-left: 15px;
   }
+
   .alt-img-list {
     padding-right: 0px;
   }
 }
+
 /* ----------------------------------------mobile 425px and below ---------------------------------------------- */
 
 @media (max-width: 425px) {
   .product-details-wrapper {
     margin-bottom: 0px;
   }
+
   .similar-products-container {
     padding-right: 0px;
   }
+
   .similar-products-wrapper {
     justify-content: space-between;
   }
+
   .quantity-increase {
     padding-left: 14px;
   }
+
   .quantity-decrease {
     padding-right: 14px;
   }
+
   .product-details-carousel {
     padding: 0px;
     margin-bottom: 60px;
   }
+
   .dropdown-menu.show {
     min-width: fit-content;
   }
+
   .dropdown-item {
-    text-align: right;
+    text-align: center;
   }
+
   .testing {
     font-size: 10px;
     margin-top: 5px;
   }
+
   .modal-check-button {
     width: 100%;
     margin: 0px;
@@ -866,32 +960,40 @@
   .modal-prd-det {
     font-size: 12px;
   }
+
   .modal-first {
     font-size: 12px;
   }
+
   .modal-last {
     font-size: 12px;
   }
+
   .modal-address {
     font-size: 12px;
     width: 100%;
   }
+
   .modal-email {
     font-size: 12px;
     width: 100%;
     width: 100%;
   }
+
   .modal-phone {
     width: 100%;
     font-size: 12px;
   }
+
   .modal-img img {
     width: 150px;
   }
+
   .modal-content {
     min-width: 400px;
     margin-left: 0px;
   }
+
   button.product-purchase-button {
     margin: 15% 30% 5% 26%;
   }
@@ -901,94 +1003,119 @@
     margin-left: 10px;
     margin-right: 33px;
   }
+
   .material-div {
     font-size: 12px;
   }
+
   .thickness-div {
     font-size: 12px;
   }
+
   .color-div {
     font-size: 12px;
   }
+
   .quantity-div {
     font-size: 12px;
   }
+
   .thickness-dum {
     margin-top: 5px;
     font-size: 10px;
   }
+
   .material-dum {
     font-size: 10px;
     margin-top: 5px;
   }
+
   .products-details-head {
     margin-bottom: 15px;
     font-size: 26px;
   }
+
   .product-det {
     margin-left: 0px;
     width: 850px;
     padding-left: 15px;
   }
+
   .dropdown-menu {
     transform: translate3d(0px, 26px, 0px) !important;
   }
+
   .cart-det {
     display: flex;
     margin-top: 5px;
   }
+
   button#dropdown-basic {
     width: 100%;
   }
+
   .material-det {
     margin: 0px;
   }
+
   .product-details-color {
     margin-top: 40px;
   }
+
   .product-details-quantity {
     margin-top: 40px;
   }
+
   .product-purchase-button {
     margin: 50px 100px 0px;
   }
+
   .product-description-label {
     font-size: 20px;
     margin: 25px 0px;
   }
+
   .product-details-label {
     margin: 10px 0px;
   }
+
   .product-details-texts {
     margin: 15px 0px;
   }
+
   .product-details-text {
     margin-bottom: 0px;
   }
 }
+
 @media (max-width: 420px) {
   .products-details-label {
     font-size: 24px;
   }
+
   .alt-img-hero img {
     width: 300px;
     height: 380px;
   }
 }
+
 @media (max-width: 405px) {
   .product-det {
     width: 750px;
   }
 }
+
 @media (max-width: 390px) {
   .products-details-label {
     font-size: 24px;
   }
+
   .alt-img-hero img {
     width: 270px;
     height: 350px;
   }
 }
+
 @media (max-width: 380px) {
   .product-det {
     width: 740px;
@@ -998,50 +1125,64 @@
     font-size: 25px;
   }
 }
+
 @media (max-width: 375px) {
   .similar-products-text {
     padding: 6px;
   }
+
   .product-details-carousel {
     margin-bottom: 0px;
   }
+
   .modal-input {
     margin: 5px;
   }
+
   .modal-img img {
     width: 130px;
   }
+
   .modal-content {
     min-width: 360px;
   }
+
   .dropdown-menu {
     transform: translate3d(0px, 26px, 0px) !important;
   }
+
   .details-quantity {
     width: 100%;
   }
+
   button#dropdown-basic {
     width: 100%;
   }
+
   .products-details-head {
     font-size: 22px;
   }
+
   .products-details-label {
     font-size: 20px;
   }
+
   .products-details-price {
     font-size: 22px;
   }
+
   .product-purchase-button {
     margin-top: 50px;
     width: 45%;
     margin-bottom: 20px;
     font-size: 10px;
   }
+
   .product-det {
     width: 750px;
     margin-top: 10px;
   }
+
   .alt-img-list ul li img {
     height: 50px;
     width: 50px;
@@ -1052,70 +1193,90 @@
     height: 310px;
   }
 }
+
 @media (max-width: 350px) {
   .product-det {
     width: 655px;
   }
 }
+
 @media (max-width: 320px) {
   .similar-products-head {
     font-size: 20px;
   }
+
   .similar-products-text {
     font-size: 10px;
   }
+
   .similar-products-title {
     font-size: 10px;
   }
+
   .dropdown-menu.show {
     min-width: 120px;
     max-width: 120px;
   }
+
   .cart-det {
     margin-top: 10px;
   }
+
   .alt-img-hero img {
     width: 200px;
     height: 280px;
   }
+
   .alt-img-list ul li img {
     height: 50px;
     width: 50px;
   }
+
   .product-det {
     width: 600px;
   }
+
   button#dropdown-basic {
     width: 100%;
   }
+
   .material-div {
     font-size: 11px;
   }
+
   .material-dum {
     font-size: 8px;
     margin-top: 7px;
   }
+
   .thickness-div {
     font-size: 11px;
   }
+
   .color-div {
     font-size: 11px;
   }
+
   .quantity-div {
     font-size: 11px;
   }
+
   .quantity-decrease {
     padding: 0px 13px;
   }
+
   .quantity-increase {
     padding-left: 13px;
   }
+
   button.product-purchase-button {
     margin: 20% 30% 5% 26%;
   }
+
   .dropdown-menu {
     transform: translate3d(2px, 26px, 0px) !important;
   }
+
   .color-pick {
     margin-left: 0px;
     margin-right: 15px;
