--- a/frontend/src/screens/ShippingScreen/ShippingScreen.css
+++ b/frontend/src/screens/ShippingScreen/ShippingScreen.css
@@ -35,9 +35,7 @@
 }
 
 .no-ship-from {
-  margin-top: 30px;
-  margin-left: 10px;
-  margin-right: 10px;
+  padding: 30px 15px 0 15px;
   width: 500px;
   font-size: 14px;
   font-family: 'rutanLight';
@@ -105,4 +103,16 @@
   color: white;
   margin-top: 20px;
   padding: 5px 10px;
+}
+
+@media (max-width:768px) {
+  .form-control {
+    width: 100%;
+  }
+}
+
+@media (max-width:525px) {
+  .no-ship-from {
+    width: 90vw;
+  }
 }
