Profile Page Updated

--- a/frontend/src/screens/NewProfileScreen/style.css
+++ b/frontend/src/screens/NewProfileScreen/style.css
@@ -13,6 +13,6 @@
     font-family: 'rutan';
 }
 
-.profile-tabs li:hover {
-    font-family: 'rutanBold';
+.tabs:hover {
+    font-family: 'rutanDemibold';
 }
