--- a/frontend/src/components/CheckOut/style.css
+++ b/frontend/src/components/CheckOut/style.css
@@ -29,6 +29,12 @@
   margin-bottom: 10px;
 }
 
+.existing-address-wraper{
+  max-height: 290px;
+  overflow-y: scroll;
+  /* background-color: red; */
+}
+
 .add-new-address-style{
   margin-top: 10px;
   margin-bottom: 10px;
@@ -65,6 +71,22 @@
   margin-bottom: 10px;
 }
 
+
+
+.continue-shopping-style{
+  background-color: transparent;
+  border: 1px solid #6b584c;
+  padding: 9px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #6b584c
+}
+
+.continue-shopping-style:hover{
+  background-color: #6b584c;
+  color: #FFFFFF;
+  transition: all 300ms ease-out;
+}
 
 .custom-control-input-green:focus~.custom-control-label::before { 
   border-color: #6b584c !important;
@@ -120,8 +142,5 @@
   }
 
   
-
-  
-
   
 }
