--- a/frontend/src/screens/Chekout/style.css
+++ b/frontend/src/screens/Chekout/style.css
@@ -3,11 +3,26 @@
   padding-right: 5rem;
 }
 
+
+.checkOutComp-wraper{
+  min-height: 684px;
+}
+
 @media only screen and (min-width: 340px) {
   .form-style {
     padding-left: 2px !important;
     padding-right: 2px !important;
   }
+
+  
+}
+
+@media only screen and (max-width: 414px) {
+
+  .checkOutComp-wraper{
+    min-height: 500px;
+  }
+
 }
 
 @media only screen and (min-width: 769px) {
