--- a/frontend/src/components/ProductDetails/ProductDetails.css
+++ b/frontend/src/components/ProductDetails/ProductDetails.css
@@ -120,7 +120,7 @@
   padding-bottom: 15px;
   width: 45%;
   color: #fff;
-  background-color: #6e4e37;
+  background-color: #977257;
   margin-bottom: 102px;
   border: none;
 }
