--- a/frontend/src/screens/HomeScreenBags/HomeScreenBags.css
+++ b/frontend/src/screens/HomeScreenBags/HomeScreenBags.css
@@ -35,10 +35,10 @@
 .women-button {
   padding: 18px 75px;
   width: 240px;
-  background-color: #6e4e37;
+  background-color: #977257;
   color: #fff;
   font-size: 17px;
-  border: 1px solid #6e4e37;
+  border: 1px solid #977257;
 }
 
 .women-button {
