--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -231,7 +231,7 @@
   padding: 10px 0;
   border: none;
   width: 100%;
-  background-color: #563b2e;
+  background-color: #977257;
   color: #fff;
   cursor: pointer;
 }
