--- a/frontend/src/screens/Chekout/style.css
+++ b/frontend/src/screens/Chekout/style.css
@@ -32,6 +32,19 @@
   }
 }
 
+@media (max-width: 320px) {
+  .remove-padding{
+    padding:0 !important;
+  }
+  .remove-margin{
+    margin:0 !important;
+  }
+  .remove-p-m{
+    padding:0 !important;
+    margin:0 !important;
+  }
+}
+
 .f-f {
   font-family: 'rutan';
 }
