--- a/frontend/src/screens/HomeScreen/HomeScreen.css
+++ b/frontend/src/screens/HomeScreen/HomeScreen.css
@@ -110,8 +110,8 @@
   width: 240px;
   height: 63px;
   text-transform: uppercase;
-  border: 2px solid #6e4e37;
-  background-color: #6e4e37;
+  border: 2px solid #977257; /*6e4e37*/
+  background-color: #977257;
   color: #fff;
   font-size: 20px;
 }
