--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -83,6 +83,7 @@
   color: #3a2f2d;
   border: 1px solid #3a2f2d;
   background-color: #c3ae93;
+  font-family: rutanLight;
 }
 
 .footer-main-button {
