--- a/frontend/src/components/CheckOut/style.css
+++ b/frontend/src/components/CheckOut/style.css
@@ -116,6 +116,18 @@
   border-color: #d6f5dd !important; */
 }
 
+.payment-detail-component{
+  padding: 12px;
+  padding-top: 20px;
+  padding-left: 20px;
+  border-style: solid;
+  border-color: #ced4da;
+  border-width: 1px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 60%;
+}
+
 
 @media only screen and (max-width: 414px) {
   .zip-code {
@@ -134,6 +146,10 @@
 
   .add-new-address-style #child{
     margin-top: 33px;
+  }
+
+  .payment-detail-component{
+    width:80%
   }
 }
 
