--- a/frontend/src/screens/Test Checkout/orderSummaryStyle.css
+++ b/frontend/src/screens/Test Checkout/orderSummaryStyle.css
@@ -22,6 +22,11 @@
 
 /* Iphone 5s */
 @media (max-width: 320px) {
+  .orderSummary-container-wraper{
+    padding-top: 10px;
+    padding-left: 0;
+    padding-right: 0;
+  }
     /* .checkOut-container-wraper #child{
         background-color: yellow;
     } */
