--- a/frontend/src/components/ProductDetails/ProductDetails.css
+++ b/frontend/src/components/ProductDetails/ProductDetails.css
@@ -1,3 +1,8 @@
+.Toastify__toast--default {
+  background-color: #977257;
+  color: #FFFFFF;
+}
+
 .product-details-wrapper {
   margin-top: 40px;
   margin-bottom: 40px;
