--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -84,7 +84,7 @@
 }
 
 .head-cart-scroll {
-  height: 55vh;
+  height: 70vh;
   overflow-y: auto;
 }
 
@@ -223,8 +223,12 @@
 }
 
 .head-cart-purchase-button-wrap {
-  margin-top: 40px;
+  margin-top: 15px;
   text-align: center;
+}
+
+.head-cart-continue-button-wrap{
+  margin-bottom:0;
 }
 
 .head-cart-purchase-button-wrap button {
@@ -261,6 +265,11 @@
   z-index: 10;
   top: 10px;
   right: 0;
+  min-width: 140px !important;
+}
+
+.dropdown-menu.show .dropdown-item{
+  font-size: 15px;
 }
 
 .image-of-profile {
@@ -319,7 +328,7 @@
   }
 
   .head-cart-scroll {
-    height: 46vh;
+    height: 57vh;
   }
 
   .modal-dialog {
@@ -364,6 +373,10 @@
   .modal-body {
     width: 320px;
     padding-right: 0;
+  }
+
+  .head-cart-scroll {
+    height: 50vh;
   }
 
   .head-cart-prodn {
