--- a/frontend/src/screens/Test Checkout/CheckOutStyleIndex.css
+++ b/frontend/src/screens/Test Checkout/CheckOutStyleIndex.css
@@ -1,3 +1,36 @@
+.Button-on-click{
+  background-color: #977257 !important;
+  border: 0;
+  border-radius: 0;
+  width: 100%;
+  margin-left: 7px;
+
+  /* text-decoration: none;
+  border: none;
+  padding: 12px 40px;
+  font-size: 16px;
+  background-color: green;
+  color: #fff;
+  border-radius: 5px; */
+  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+  cursor: pointer;
+  outline: none;
+  transition: all 800ms ease-out;
+}
+
+.Button-on-click:hover{
+  background-color: #977257 !important;
+}
+
+.Button-on-click:active{
+  background-color: #6b584c;
+  transform: scale(0.85);
+  /* Scaling button to 0.98 to its original size */
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+  border-radius: 10px !important;
+  /* Lowering the shadow */
+}
+
 .checkOut-container-wraper{
     display: flex;
     justify-content: center;
@@ -111,6 +144,7 @@
   transition: box-shadow 0.2s ease-in-out;
   cursor: pointer;
   min-height: 150px;
+  margin-bottom: 15px;
 }
 
 .existing-address-component:hover{
@@ -122,7 +156,7 @@
               0 32px 64px rgba(0,0,0,0.07);
 }
 
-.existing-address-hardNum-style{
+.existing-address-evenNum-style{
   margin-right: 20px;
 }
 
@@ -197,7 +231,7 @@
 
 @media (max-width: 755px) {
 
-  .existing-address-hardNum-style{
+  .existing-address-evenNum-style{
     margin-right: 0;
   }
   
