--- a/frontend/src/screens/HomeScreenHome/HomeScreenHome.css
+++ b/frontend/src/screens/HomeScreenHome/HomeScreenHome.css
@@ -78,10 +78,10 @@
   margin-top: 90px;
   padding: 18px 75px;
   width: 240px;
-  background-color: #6e4e37;
+  background-color: #977257;
   color: #fff;
   font-size: 17px;
-  border: 1px solid #6e4e37;
+  border: 1px solid #977257;
 }
 .home-text {
   font-family: 'rutanLight';
