--- a/frontend/src/screens/HomeScreenStorage/HomeScreenStorage.css
+++ b/frontend/src/screens/HomeScreenStorage/HomeScreenStorage.css
@@ -3,10 +3,10 @@
   margin-top: 120px;
   padding: 18px 75px;
   width: 240px;
-  background-color: #6e4e37;
+  background-color: #977257;
   color: #fff;
   font-size: 17px;
-  border: 1px solid #6e4e37;
+  border: 1px solid #977257;
 }
 .home-workout-button {
   margin-top: 110px;
@@ -118,26 +118,24 @@
     padding: 0px;
   }
 }
-@media (max-width: 1200px){
-  .label-view-workout{
+@media (max-width: 1200px) {
+  .label-view-workout {
     right: 50% !important;
     width: 100% !important;
-
   }
-    .label-best-workout{
-      right: 0% !important;
-    }
+  .label-best-workout {
+    right: 0% !important;
+  }
   .hero-image-workout {
     margin-right: 0px;
     max-width: 40.5%;
   }
 }
-@media (min-width: 1025px) and (max-width:1229px)
-{
-  .workout-hero-image img{
+@media (min-width: 1025px) and (max-width: 1229px) {
+  .workout-hero-image img {
     height: 670px;
   }
-  .home-card-text{
+  .home-card-text {
     margin-bottom: 0px;
   }
 }
@@ -181,7 +179,7 @@
   }
 }
 @media (max-width: 991px) {
-  .label-best-workout{
+  .label-best-workout {
     right: 0% !important;
   }
   .home-title {
@@ -276,10 +274,10 @@
 }
 
 @media (max-width: 768px) {
-  .label-best-workout{
+  .label-best-workout {
     width: 82% !important;
   }
-  .workout-hero-image img{
+  .workout-hero-image img {
     height: 465px;
   }
   .home-wrapper {
