--- a/frontend/src/components/MobileNav/MobileNav.css
+++ b/frontend/src/components/MobileNav/MobileNav.css
@@ -1,6 +1,7 @@
 .mobile-nav-cont {
   display: none;
   background: #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.692);
   z-index: 1;
 }
 
@@ -9,7 +10,7 @@
   display: flex;
   flex-direction: row;
   list-style: none;
-  overflow: auto;
+  overflow: scroll;
   font-size: 14px;
   width: 100%;
   font-family: 'rutan';
