--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,3 +1,4 @@
+
 .navbar {
   background-color: #fff;
   height: 60px;
@@ -50,7 +51,7 @@
 }
 
 .title-search {
-  display: none;
+  display: block;
 }
 
 .times-icon {
