--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -85,7 +85,8 @@
 }
 
 .head-cart-scroll {
-  height: 70vh;
+  height: 60%;
+  /* height: 70vh; */
   overflow-y: auto;
 }
 
@@ -392,5 +393,12 @@
 
   .head-cart-purchase-button-wrap {
     margin-right: 10px;
+  }
+}
+
+
+@media (min-width: 1280px){
+  .head-cart-scroll {
+    height: 65vh
   }
 }
