--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,4 +1,3 @@
-
 .navbar {
   background-color: #fff;
   height: 60px;
@@ -229,11 +228,11 @@
   text-align: center;
 }
 
-.head-cart-continue-button-wrap{
-  margin-bottom:0;
+.head-cart-continue-button-wrap {
+  margin-bottom: 0;
 }
 
-.head-cart-purchase-button-wrap #continue{
+.head-cart-purchase-button-wrap #continue {
   color: #fff;
   letter-spacing: 1px;
 }
@@ -245,7 +244,7 @@
   /* background-color: #977257; */
   color: #977257;
   cursor: pointer;
-  border: 1px solid #977257
+  border: 1px solid #977257;
 }
 
 .badge {
@@ -276,7 +275,7 @@
   min-width: 140px !important;
 }
 
-.dropdown-menu.show .dropdown-item{
+.dropdown-menu.show .dropdown-item {
   font-size: 15px;
 }
 
@@ -286,6 +285,7 @@
   width: 20px;
   border-radius: 50%;
   margin-right: 5px;
+  margin-left: 5px;
 }
 
 @media (max-width: 1600px) {
@@ -396,9 +396,8 @@
   }
 }
 
-
-@media (min-width: 1280px){
+@media (min-width: 1280px) {
   .head-cart-scroll {
-    height: 65vh
+    height: 65vh;
   }
 }
