--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -284,8 +284,7 @@
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  margin-right: 5px;
-  margin-left: 5px;
+  margin: 5px 0;
 }
 
 @media (max-width: 1600px) {
