--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -284,7 +284,8 @@
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  margin: 5px 0;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 @media (max-width: 1600px) {
